<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp"
        android:clickable="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/arrowback"
        android:focusable="true"
        android:src="@drawable/baseline_arrow_back_24" />

    <ImageView
        android:id="@+id/bookmarkImage"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/coffee_image"
        android:src="@drawable/baseline_bookmark_add_24"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/titletextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_note"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_below="@id/bookmarkImage"
        />

    <LinearLayout
        android:id="@+id/form_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titletextview"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_corner">

        <EditText
            android:id="@+id/titleinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/title"
            android:background="@drawable/rounded_corner"
            android:inputType="text"
            android:padding="10dp"
            android:layout_margin="10dp" />

        <FrameLayout
            android:id="@+id/framelayout"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp">

            <EditText
                android:id="@+id/descriptioninput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:hint="@string/description"
                android:background="@drawable/rounded_corner"
                android:inputType="textAutoCorrect"
                android:padding="10dp"
                android:gravity="top|start"
                android:layout_margin="5dp"
                android:layout_gravity="center" />
        </FrameLayout>
        <ImageView
            android:id="@+id/uploadedImageView"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/uploaded_image"
            android:focusable="true"
            android:visibility="gone"
            android:clickable="true"
            android:scaleType="centerInside"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/uploadFileIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:focusable="true"
        android:orientation="vertical"
        android:clickable="true"
        android:layout_marginBottom="80dp"
        android:padding="8dp">

        <View
            android:layout_width="110dp"
            android:layout_height="1dp"
            android:background="@color/gray"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:src="@drawable/baseline_file_upload_24"
            android:contentDescription="@string/upload_button"
            android:focusable="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_file"
            android:textColor="@color/dark_gray"
            android:textSize="11sp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"/>
        <View
            android:layout_width="110dp"
            android:layout_height="1dp"
            android:background="@color/gray"/>
    </LinearLayout>
    <ImageButton
        android:id="@+id/savebutton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/pink"
        android:contentDescription="@string/add_button"
        android:scaleType="centerInside"
        android:src="@drawable/baseline_done_24"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="20dp"
        tools:ignore="RtlHardcoded" />
</RelativeLayout>
