<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:layout_marginTop="40dp">

    <ImageView
        android:id="@+id/bookmarkImage"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/coffee_image"
        android:src="@drawable/baseline_bookmark_added_24"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/edittitletextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_note"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_below="@id/bookmarkImage" />

    <LinearLayout
        android:id="@+id/form_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittitletextview"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_corner">

        <EditText
            android:id="@+id/edittitleinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:background="@drawable/rounded_corner"
            android:inputType="text"
            android:padding="10dp"
            android:layout_margin="10dp" />
        <FrameLayout
            android:id="@+id/editframelayout"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp">

            <EditText
                android:id="@+id/editdescriptioninput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/description"
                android:background="@drawable/rounded_corner"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:gravity="top|start"
                android:layout_gravity="center" />

            <LinearLayout
                android:id="@+id/editUploadFileIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:focusable="true"
                android:orientation="vertical"
                android:clickable="true"
                android:layout_margin="5dp"
                android:padding="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:src="@drawable/baseline_file_upload_24"
                    android:contentDescription="@string/upload_button"
                    android:focusable="true"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_file"
                    android:layout_gravity="end"
                    android:textColor="@color/dark_gray"
                    android:textSize="11sp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"/>
            </LinearLayout>
        </FrameLayout>
        <ImageView
            android:id="@+id/editUploadedImageView"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:focusable="true"
            android:visibility="gone"
            android:clickable="true"
            android:scaleType="centerInside"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/editNotebutton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:contentDescription="@string/add_button"
        android:scaleType="centerInside"
        android:src="@drawable/baseline_edit_24"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="20dp"
        tools:ignore="RtlHardcoded" />

    <!-- Delete button on bottom-left -->
    <ImageButton
        android:id="@+id/editdeleteNotebutton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@android:color/holo_red_dark"
        android:contentDescription="@string/delete"
        android:scaleType="centerInside"
        android:src="@drawable/baseline_delete_24"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        tools:ignore="RtlHardcoded" />

</RelativeLayout>
