<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcomeMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:padding="16dp"

    tools:context=".WelcomePage">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_your_notes"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="25sp"
            android:fontFamily="@font/dancingscript">

        </TextView>

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/logoo"
            android:backgroundTint="@android:color/transparent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp">
        </ImageView>
        <Button
            android:id="@+id/welcomePageloginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:backgroundTint="@color/white"
            android:padding="5dp"
            android:textSize="15sp"
            android:background="@drawable/plus_button_background"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:layout_marginBottom="5dp">

        </Button>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="@color/dark_gray"
            android:gravity="end"
            android:layout_marginBottom="25dp">

        </TextView>
        <Button
            android:id="@+id/welcomePageSignUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:backgroundTint="@color/pink"
            android:padding="5dp"
            android:textSize="15sp"
            android:background="@drawable/plus_button_background"
            android:textColor="@color/black"
            android:textAllCaps="false">
        </Button>


    </LinearLayout>


</RelativeLayout>