<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp"
    android:background="@drawable/login_background">

    <TextView
        android:id="@+id/menuLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:fontFamily="@font/dancingscript"
        android:textColor="@color/white"
        android:layout_alignTop="@id/menuIcon"
        android:maxLines="2"
        android:layout_alignBottom="@id/menuIcon"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical" />


    <ImageView
        android:id="@+id/menuIcon"
        android:layout_width="35dp"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="1dp"
        android:contentDescription="@string/menu_icon"
        android:focusable="true"
        android:src="@drawable/baseline_menu_24" />


    <!-- Search Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/searchCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="3dp"
        android:layout_marginStart="1dp"
        android:layout_below="@id/menuIcon"
        android:layout_marginEnd="1dp"
        card_view:cardCornerRadius="14dp"
        card_view:cardElevation="24dp"
        android:background="@android:color/white">

        <EditText
            android:id="@+id/editSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:drawableStart="@drawable/baseline_search_24"
            android:drawableEnd="@drawable/baseline_cancel_24"
            android:textColor="@color/dark_gray"
            android:backgroundTint="@color/black"
            android:background="@android:color/transparent"
            android:hint="@string/search_your_notesEdit" />
    </androidx.cardview.widget.CardView>

    <!-- Empty Notes Message -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/searchCard"
        tools:ignore="UseCompoundDrawables">


        <ImageView
            android:id="@+id/emptyNotesImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="350dp"
            android:contentDescription="@string/empty_notes"
            android:src="@drawable/baseline_add_new_note"
            android:visibility="gone" />

        <TextView
            android:id="@+id/noNotesLetter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_notes_click_on_to_add_a_note"
            android:textColor="@color/dark_gray"
            android:textAlignment="center"
            android:visibility="gone" />
    </LinearLayout>

    <!-- No Results Message -->
    <LinearLayout
        android:id="@+id/noResultsText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="250dp"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/baseline_search_off_24"
            android:contentDescription="@string/search_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_matching_notes"
            android:textSize="14sp"
            android:layout_marginTop="4dp" />
    </LinearLayout>

    <!-- Notes Title -->
    <!-- Notes RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchCard"
        android:layout_above="@id/addnewnotebtn"
        android:layout_margin="10dp"
        android:focusable="true" />
    <!-- Add New Note Button -->
    <ImageButton
        android:id="@+id/addnewnotebtn"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/pink"
        android:scaleType="centerInside"
        android:src="@drawable/baseline_add_24"
        android:contentDescription="@string/add_button" />

</RelativeLayout>