<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_background"
            android:orientation="vertical">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragmentContainerView"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:navGraph="@navigation/nav_graph"
                app:defaultNavHost="true" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/customDrawer"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:orientation="vertical"
            android:background="@color/black"
            android:padding="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:textAlignment="center"
                android:text="@string/user"
                android:textSize="18sp"
                android:textColor="@color/dark_gray">

            </TextView>
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:contentDescription="@string/user_profile"
             android:src="@drawable/baseline_person_24">
         </ImageView>
        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@color/dark_gray">
            </View>
            <TextView
                android:id="@+id/signOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:textSize="18sp"
                android:text="@string/sign_out"
                android:textAlignment="center"
                android:clickable="true"
                android:textColor="@color/red">
            </TextView>
        </LinearLayout>

    </androidx.drawerlayout.widget.DrawerLayout>
</layout>
